# drinks-codex

frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts  hooks.server.ts
frontend/src/lib/components/: Header.svelte  Spinner.svelte
frontend/src/lib/config/: index.ts
frontend/src/lib/functions/: index.ts
frontend/src/lib/guards/: Protected.svelte
frontend/src/lib/types/: api.ts  index.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/protected/: +page.svelte
functions/: .python-version  function_app.py  pyproject.toml  requirements.txt
functions/db/: base.py  dummy.py
functions/exceptions/: __init__.py
functions/models/: __init__.py  authentication.py  beer.py  user.py
functions/models/providers/: github.py
functions/routers/: authentication.py  beers.py  users.py
functions/utils/: authentication.py  constants.py
